# Loops

./: .gitignore  .gitmodules  CMakeLists.txt  README.txt  Util.cmake  vcpkg.json
Assets/Graphics/Vulkan/Reflections/: ColorLighting.frag.refl  PC.vert.refl  Test.vert.refl
Assets/Graphics/Vulkan/Shaders/: ColorLighting.frag  PC.vert  PCN_Lighting.vert  (+5 more)
Source/Application/: ApplicationController.cpp  ApplicationController.h  CMakeLists.txt  CameraController.cpp  CameraController.h  EngineManager.cpp  EngineManager.h  PlayerHandlerScript.cpp  PlayerHandlerScript.h  SceneManager.cpp  SceneManager.h  SceneManagerScript.cpp  SceneManagerScript.h  main.cpp
Source/Core/: CMakeLists.txt  CoreManager.cpp  CoreManager.h  CorePrecompiled.h  RendererSettings.cpp  RendererSettings.h  Settings.cpp  Settings.h
Source/Core/Design/: ComponentHandle.h  ComponentManager.h  ComponentMask.cpp  ComponentMask.h  ECS_EngineManager.cpp  ECS_EngineManager.h  ECS_Helper.h  ECS_Setting.cpp  ECS_Setting.h  Entity.h  EntityHandle.h  EntityManager.cpp  EntityManager.h  EntityMap.h  EventBus.cpp  EventBus.h  MeshFilter.cpp  MeshFilter.h  MeshFilterSystem.cpp  MeshFilterSystem.h  ReadMe.txt  System.cpp  System.h  Timer.h  UnitTest_ECS.cpp  UnitTest_ECS.h  World.cpp  World.h  component.cpp  component.h  main.cpp
Source/Core/Design/Components/: Geometry.h  Material.h  Mesh.h  SceneChangeEvent.h  Scriptable.h  ScriptableSystem.cpp  ScriptableSystem.h  Shader.h  Transform.cpp  Transform.h  TransformSystem.cpp  TransformSystem.h
Source/Core/ECS/: Component.h  ComponentManager.h  ComponentMask.cpp  ECS_EngineManager.cpp  ECS_EngineManager.h  ECS_Setting.h  Entity.h  EntityHandle.h  EntityManager.cpp  EntityManager.h  EventBus.cpp  System.h  UnitTest_ECS.cpp  World.cpp  World.h
Source/Core/ECS/Components/: Camera.cpp  Camera.h  ComponentAdditionEvent.h  Light.h  Material.h  Mesh.h  MeshAdditionEvent.h  MeshRenderer.h  SceneChangeEvent.h  SceneNode.cpp  SceneNode.h  Scriptable.h  Shader.h  Transform.cpp  Transform.h  TransformSystem.h
Source/Core/Engine/: ComponentMask.h  Entity.h  EntityManager.h  EntityMap.h  Globals.h  HandlerFunctionBase.h  MeshFilter.cpp  MeshFilter.h  MeshFilterSystem.cpp  MeshFilterSystem.h  RendererSystem.cpp  RendererSystem.h  Settings.h  System.h  Timer.cpp  TransformSystem.cpp  TransformSystem.h  World.h
Source/Core/IO/: FileReader.cpp  FileReader.h
Source/Core/Math/: BoundingBox.cpp  BoundingBox.h  Cube.h  Frustum.cpp  Frustum.h  MathUtil.cpp  MathUtil.h  Plane.cpp  Plane.h
Source/Core/Platform/: Assertion.cpp  Assertion.h  PlatformManager.cpp  PlatformManager.h
Source/Core/Platform/WindowManagement/: ReadMe.txt
Source/Core/Reflection/: ReadMe.txt
Source/Core/Utility/: HashHelper.h  HashManager.cpp  HashManager.h  PipelineStateWrappers.cpp  PipelineStateWrappers.h  ResourceAllocationHelper.cpp  ShaderResourceDescription.h  Timer.cpp  Timer.h
Source/Core/Utility/Container/: BinaryTree.h  BitArray.cpp  BitArray.h  DoublyLinkedList.h  Graph.h  LinkedList.h  Queue.h  SceneNode.h  Stack.h  Tree.h  Vector.h
Source/Core/Utility/RenderingWrappers/: AttributeHelper.cpp  AttributeHelper.h  PipelineStateWrappers.cpp  PipelineStateWrappers.h  RenderingWrapper.h
Source/EngineInterface/: EngineManager.cpp  SceneManager.cpp  SceneManager.h
Source/EngineInterface/ECS/: ECS_EngineManager.cpp  ECS_EngineManager.h
Source/Graphics/: CMakeLists.txt
Source/Graphics/Drivers/Vulkan/: CMakeLists.txt  PresentationEngine.cpp  PresentationEngine.h  Test.h  ValidationManager.cpp  ValidationManager.h  VkAttachmentFactory.cpp  VkAttachmentFactory.h  VkBufferFactory.cpp  VkCommandBufferFactory.cpp  VkCommandBufferFactory.h  VkDescriptorPoolFactory.cpp  VkDescriptorPoolFactory.h  VkDrawCommandBuffer.cpp  VkDrawCommandBuffer.h  VkFrameBufferFactory.cpp  VkFrameBufferFactory.h  VkQueueFactory.cpp  VkQueueFactory.h  VkRenderPassFactory.cpp  VkRenderPassFactory.h  VkRenderingUnwrapper.cpp  VkRenderingUnwrapper.h  VkShaderFactory.cpp  VkShaderFactory.h  VkShaderResourceAllocator.cpp  VkShaderResourceAllocator.h  VkShaderResourceManager.cpp  VkShaderResourceManager.h  VkSynchroniserFactory.cpp  VkSynchroniserFactory.h  VulkanGraphicsPipeline.cpp  VulkanGraphicsPipeline.h  VulkanGraphicsPipelineFactory.cpp  VulkanGraphicsPipelineFactory.h  VulkanManager.cpp  VulkanManager.h  VulkanMemoryManager.cpp  VulkanMemoryManager.h  VulkanSettings.h  (+2 more)
Source/Graphics/Drivers/Vulkan/Pipeline/: VulkanGraphicsPipeline.cpp  VulkanGraphicsPipeline.h  VulkanGraphicsPipelineFactory.cpp  VulkanGraphicsPipelineFactory.h
Source/Graphics/Drivers/Vulkan/ShaderManagement/: VkBufferFactory.cpp  VkBufferFactory.h  VkDescriptorPoolFactory.cpp  VkShaderFactory.cpp  VkShaderResourceAllocator.cpp  VkShaderResourceAllocator.h  VkShaderResourceManager.cpp  VkShaderResourceManager.h
Source/Graphics/Drivers/Vulkan/Utility/: VkRenderingUnwrapper.cpp  VkRenderingUnwrapper.h  VulkanMemoryManager.cpp  VulkanMemoryManager.h  VulkanUtility.cpp
Source/Graphics/Rendering/: CommandBufferManager.h  DrawCommandBuffer.cpp  DrawCommandBuffer.h  DxInterface.h  ForwardInterface.h  GraphicsManager.cpp  GraphicsManager.h  RendererSettings.cpp  RendererSettings.h  RenderingInterface.cpp  RenderingInterface.h  VulkanInterface.cpp  VulkanInterface.h
Source/Graphics/Rendering/DrawGraph/: DrawGraphManager.cpp  DrawGraphManager.h  DrawGraphNode.cpp  DrawGraphNode.h  ForwardDrawGraph.h
Source/Graphics/Rendering/PipelineGraph/: GraphicsPipelineManager.cpp  GraphicsPipelineManager.h  PipelineNode.h  PipelineStateWrappers.cpp  PipelineStateWrappers.h
Source/Graphics/Rendering/Scenegraph/: SceneGraphManager.cpp  SceneGraphManager.h  SceneNode.h
Source/Graphics/Rendering/Variables/: MaterialFactory.cpp  MaterialFactory.h  MeshFactory.cpp  MeshFactory.h  ShaderFactory.cpp  ShaderFactory.h  UniformFactory.cpp  UniformFactory.h
Source/Graphics/Windowing/: InputEvents.h  InputManager.cpp  InputManager.h  InputManagerGLFW.cpp  MouseInputManager.cpp  MouseInputManager.h  WindowManager.cpp  WindowManager.h  Window_glfw.cpp  Window_win32.cpp
(+15 files in other folders)
